fix: header text content and spacings

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -124,7 +124,7 @@
     &__side-text {
       font-size: 0.9375rem;
       text-align: right;
-      max-width: 30rem;
+      max-width: 31rem;
       margin-left: auto;
     }
 
